fix bug with layout shift on safari

--- a/src/styles.module.scss
+++ b/src/styles.module.scss
@@ -19,20 +19,16 @@ $cattab-height: $cattab-height-value + px;
 html, body {
   padding: 0;
   margin: 0;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
 }
 
 .app {
   position: relative;
   overflow: hidden;
-  width: 375px;
-  height: 812px;
+  width: 100vw;
+  height: 100vh;
   background-color: $bg-color;
-
-  @media (pointer:none),
-  (pointer:coarse) {
-    width: 100vw;
-    height: 100vh;
-  }
 
   .catTabBar {
     width: 100%;
@@ -45,6 +41,7 @@ html, body {
   }
 
   .dishList {
+    position: relative;
     width: 100%;
     height: 100%;
     padding: 8px 8px 100vh 8px;
@@ -138,9 +135,14 @@ html, body {
 
           .content {
             overflow-y: scroll;
+            overflow-x: hidden;
             height: 100%;
             padding: 8px;
             flex-shrink: 1;
+            &::-webkit-scrollbar {
+              display: none;
+            }
+            scrollbar-width: none;
           }
         }
 
